--- a/SOFTPRINCIPAL/nbproject/project.properties
+++ b/SOFTPRINCIPAL/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SOFTPRINCIPAL
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=src\\lib\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0.jar-1=..\\..\\..\\ProyectoLP2\\SOFTPRINCIPAL\\src\\lib\\mysql-connector-j-8.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.SoftEventoModel.jar}:\
     ${reference.SoftEventoController.jar}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar}
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
