--- a/SOFTPRINCIPAL/nbproject/private/private.properties
+++ b/SOFTPRINCIPAL/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\DELL\\OneDrive - CIBERTEC\\Desktop\\conectors\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
-user.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=/home/marcelo/.netbeans/21/build.properties
