--- a/SOFTPRINCIPAL/nbproject/project.properties
+++ b/SOFTPRINCIPAL/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.output=${dist.jlink.dir}/SOFTPRINCIPAL
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=src\\lib\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-8.3.0.jar-1=..\\..\\..\\ProyectoLP2\\SOFTPRINCIPAL\\src\\lib\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0.jar-2=src/lib/mysql-connector-j-8.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.SoftEventoModel.jar}:\
     ${reference.SoftEventoController.jar}:\
     ${file.reference.mysql-connector-j-8.3.0.jar}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar-1}
+    ${file.reference.mysql-connector-j-8.3.0.jar-1}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
