--- a/SoftGestReservaModel/nbproject/project.properties
+++ b/SoftGestReservaModel/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/SoftGestReservaModel
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.SoftRRHHModel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,8 +45,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -76,6 +77,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.SoftRRHHModel=../SoftRRHHModel
+reference.SoftRRHHModel.jar=${project.SoftRRHHModel}/dist/SoftRRHHModel.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
